<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_icon"
        android:icon="@drawable/search"
        android:orderInCategory="10"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/top_rated"
        android:orderInCategory="12"
        android:title="@string/top_rated"
        app:showAsAction="never" />
    <item
        android:id="@+id/top_liked"
        android:orderInCategory="11"
        android:title="@string/top_like"
        app:showAsAction="never" />
    <item
        android:id="@+id/top_viewed"
        android:orderInCategory="100"
        android:title="@string/top_viewed"
        app:showAsAction="never" />
    <item
        android:id="@+id/favourites"
        android:orderInCategory="101"
        android:title="@string/favourite"
        app:showAsAction="never" />
</menu>

