<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imv_close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/cardview_selector"
        android:padding="5dp"
        android:contentDescription="@string/close_page"
        android:src="@android:drawable/ic_delete" />

    <ScrollView
        android:id="@+id/scollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imv_close"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/tv_log_into_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"

                android:text="@string/log_into_app"
                android:contentDescription="@string/log_into_app"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.facebook.login.widget.LoginButton

                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorWhite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:contentDescription="@string/login_with_fb"
                app:layout_constraintTop_toBottomOf="@+id/tv_log_into_app" />


            <TextView
                android:id="@+id/tv_facebook_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintLeft_toLeftOf="parent"
                android:contentDescription="@string/com_facebook_internet_permission_error_message"
                app:layout_constraintTop_toBottomOf="@+id/login_button"
                tools:text="TextView" />


            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginTop="20dp"
                android:tag="@string/continue_google"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:contentDescription="@string/login_with_gmail"
                app:layout_constraintTop_toBottomOf="@+id/tv_facebook_error" />


            <TextView
                android:id="@+id/tv_gmail_erro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="left"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
                android:contentDescription="@string/erremail"
                tools:text="@string/fashion_long" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:text="@string/login_direct"
                android:contentDescription="@string/login_direct"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_gmail_erro" />


            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginTop="8dp"
                android:background="@color/colorWhite"
                android:contentDescription="@string/usernameDesc"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"></EditText>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginTop="8dp"
                android:background="@color/colorWhite"
                android:contentDescription="@string/emailDesc"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_username"></EditText>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="200dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_selector"
                android:contentDescription="@string/submitDesc"
                android:text="@string/submit"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</RelativeLayout>